[tool.poetry]
name = "portfolio-projects"
version = "0.1.0"
description = ""
authors = ["Otavius Whitehead <otaviuswhitehead1994@gmail.com>"]
readme = "README.md"
packages = [{include = "portfolio_projects"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
